--- a/package.json
+++ b/package.json
@@ -1,5 +1,21 @@
 {
+  "name": "tailwind-css-project",
+  "version": "1.0.0",
+  "description": "A project using Tailwind CSS",
+  "main": "index.js",
+  "scripts": {
+    "build": "postcss src/styles.css -o public/styles.css",
+    "dev": "npx tailwindcss -i ./src/input.css -o ./public/output.css -w"
+  },
+  "dependencies": {
+    "tailwindcss": "^3.0.0",
+    "autoprefixer": "^10.4.0",
+    "postcss": "^8.4.0"
+  },
   "devDependencies": {
-    "tailwindcss": "^3.4.17"
-  }
+    "postcss-cli": "^9.1.0"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "MIT"
 }
